2005-06-29  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/comment.rb (comment_post): not add emphasize and
	link tags around a name (reported by Kouhei Sutou).

	* plugin/00default.rb (br): add a new plugin method.

	* hiki/command.rb (code_conv): add a new method for mobile agents.

	* misc/plugin/amazon.rb: for a little modified of web site changing.

2005-06-28  Kouhei Yanagita <sugi@dream.big.or.jp>
	* theme/hiki/hiki.css: revise the default theme.

	* data/text/SideMenu, misc/text/rd+/SideMenu: SideMenu should begin with a heading level 1.

	* doc/README.txt, doc/INSTALL.txt: revise the documents.

	* doc/README.en: add English README.

2005-06-27  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/footnote.rb, misc/plugin/keyword.rb,
	misc/plugin/orphan.rb, misc/plugin/pagerank.rb,
	misc/plugin/referer.rb, misc/plugin/sitemap.rb: use
	'export_plugin_methods'.

	* misc/plugin/isbn.rb (isbn): revise bk1's uri. remove 'Fujisan'.

	* misc/plugin/rss-show.rb: use 'rss-show/' directory under the
	cache path.

	* hiki/config.rb (load): mkdir a cache path if not exists.

	* misc/plugin/readlirs.rb: use 'readlirs/' directory under the
	cache path.

	* misc/plugin/about.rb, remap_headings.rb: removed.
	* misc/plugin/quote_page.rb: merge remap_headings.rb.

	* misc/plugin/template.rb: support configuration via browsers.

2005-06-25  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: check the remote repository condition
	only if @repos_root exists (reported by NAGASAKI).

2005-06-25  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/text/default.en/*: add English data.
	* data/text/EnglishTextFormattingRules: moved to `misc/text/default.en/TextFormattingRules'.
	* misc/text/default: removed because this is same to `data/text'.

	* doc/INSTALL.en: add English data information to the document.

	* misc/text/default.en/TextFormattingRules: reviced.

	* misc/i18n/hikiconf.rb.sample.en: add a new file.

2005-06-24  Kouhei Yanagita <sugi@dream.big.or.jp>